Closed
Bug 1462316
Opened 6 years ago
Closed 6 years ago
Crash in nsAbView::OnItemAdded
Categories
(MailNews Core :: Address Book, defect)
Tracking
(thunderbird_esr6063+ fixed, thunderbird63 wontfix, thunderbird64 fixed)
RESOLVED
FIXED
Thunderbird 64.0
People
(Reporter: wsmwk, Assigned: jorgk-bmo)
Details
(Keywords: crash)
Crash Data
Attachments
(1 file, 1 obsolete file)
1001 bytes,
patch
|
mkmelin
:
review+
jorgk-bmo
:
approval-comm-beta+
jorgk-bmo
:
approval-comm-esr60+
|
Details | Diff | Splinter Review |
The reporter of bp-d9c7f90a-100e-4b50-93ae-ce33f0180517 writes "crashes when i add a new address book"
=============================================================
Top 10 frames of crashing thread:
0 XUL nsAbView::OnItemAdded /builds/slave/tb-rel-c-esr52-m64_bld-0000000/build/mailnews/addrbook/src/nsAbView.cpp:877
1 XUL nsAbManager::NotifyDirectoryItemAdded /builds/slave/tb-rel-c-esr52-m64_bld-0000000/build/mailnews/addrbook/src/nsAbManager.cpp:433
2 XUL nsAbMDBDirectory::AddMailList /builds/slave/tb-rel-c-esr52-m64_bld-0000000/build/mailnews/addrbook/src/nsAbMDBDirectory.cpp:243
3 XUL NS_InvokeByIndex xpcom/reflect/xptcall/md/unix/xptcinvoke_x86_64_unix.cpp:180
4 XUL XPCWrappedNative::CallMethod js/xpconnect/src/XPCWrappedNative.cpp:2058
5 XUL XPC_WN_CallMethod js/xpconnect/src/XPCWrappedNativeJSOps.cpp:1000
6 XUL js::InternalCallOrConstruct js/src/jscntxtinlines.h:239
7 XUL Interpret js/src/vm/Interpreter.cpp:510
8 XUL js::RunScript js/src/vm/Interpreter.cpp:405
9 XUL js::InternalCallOrConstruct js/src/vm/Interpreter.cpp:477
=============================================================
Reporter | ||
Comment 1•6 years ago
|
||
Is this mere data corruption, or an easier to problem?
more recent examples
mac bp-d9c7f90a-100e-4b50-93ae-ce33f0180517 bp-7c3ce9f8-a126-4c92-9d70-0d4490180525
win bp-366b3d51-8355-4eeb-8487-a6d210180314
Flags: needinfo?(m_kato)
Comment 2•6 years ago
|
||
(In reply to Wayne Mery (:wsmwk) from comment #1)
> Is this mere data corruption, or an easier to problem?
>
> more recent examples
> mac bp-d9c7f90a-100e-4b50-93ae-ce33f0180517
> bp-7c3ce9f8-a126-4c92-9d70-0d4490180525
> win bp-366b3d51-8355-4eeb-8487-a6d210180314
I think mDirectory is null because directory of address book isn't selected. If it is null, we should return NS_OK immediately.
Flags: needinfo?(m_kato)
Assignee | ||
Comment 3•6 years ago
|
||
Assignee: nobody → jorgk
Status: NEW → ASSIGNED
Attachment #9015041 -
Flags: review?(mkmelin+mozilla)
Assignee | ||
Comment 4•6 years ago
|
||
Attachment #9015041 -
Attachment is obsolete: true
Attachment #9015041 -
Flags: review?(mkmelin+mozilla)
Attachment #9015043 -
Flags: review?(mkmelin+mozilla)
Comment 5•6 years ago
|
||
Comment on attachment 9015043 [details] [diff] [review]
1462316-nsAbView-OnItemAdded-crash.patch
Review of attachment 9015043 [details] [diff] [review]:
-----------------------------------------------------------------
LGTM, r=mkmelin
::: mailnews/addrbook/src/nsAbView.cpp
@@ +838,5 @@
>
> NS_IMETHODIMP nsAbView::OnItemAdded(nsISupports *parentDir, nsISupports *item)
> {
> + if (!mDirectory)
> + return NS_OK;
You could add t// address book isn't selected
Attachment #9015043 -
Flags: review?(mkmelin+mozilla) → review+
Pushed by mozilla@jorgk.com:
https://hg.mozilla.org/comm-central/rev/8ea70a1b44ea
fix crash in nsAbView::OnItemAdded(). r=mkmelin
Status: ASSIGNED → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Assignee | ||
Updated•6 years ago
|
Target Milestone: --- → Thunderbird 64.0
Assignee | ||
Updated•6 years ago
|
Attachment #9015043 -
Flags: approval-comm-esr60?
Attachment #9015043 -
Flags: approval-comm-beta+
Assignee | ||
Updated•6 years ago
|
Attachment #9015043 -
Flags: approval-comm-esr60? → approval-comm-esr60+
Assignee | ||
Comment 7•6 years ago
|
||
TB 60.3 ESR:
https://hg.mozilla.org/releases/comm-esr60/rev/1c36ca9a71d4f53e1928d7491f14760e90c37535
status-thunderbird63:
--- → affected
status-thunderbird64:
--- → fixed
status-thunderbird_esr60:
--- → fixed
tracking-thunderbird_esr60:
--- → 63+
Assignee | ||
Comment 8•6 years ago
|
||
Assignee | ||
Updated•6 years ago
|
You need to log in
before you can comment on or make changes to this bug.
Description
•