Bug 1462316 - fix crash in nsAbView::OnItemAdded(). r=mkmelin